[gd_scene load_steps=3 format=3 uid="uid://d1kbhcexja5qg"]

[ext_resource type="Script" path="res://main.gd" id="1_p5img"]

[sub_resource type="FontFile" id="FontFile_s6kl7"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/10/0/ascent = 0.0
cache/0/10/0/descent = 0.0
cache/0/10/0/underline_position = 0.0
cache/0/10/0/underline_thickness = 0.0
cache/0/10/0/scale = 1.0
cache/0/12/0/ascent = 0.0
cache/0/12/0/descent = 0.0
cache/0/12/0/underline_position = 0.0
cache/0/12/0/underline_thickness = 0.0
cache/0/12/0/scale = 1.0

[node name="Main" type="Node2D"]
script = ExtResource("1_p5img")

[node name="Load Button" type="Button" parent="."]
offset_left = 435.0
offset_top = 233.0
offset_right = 469.0
offset_bottom = 258.0
theme_override_fonts/font = SubResource("FontFile_s6kl7")
theme_override_font_sizes/font_size = 12
text = "Start"

[node name="Remove Button" type="Button" parent="."]
visible = false
offset_left = 421.0
offset_top = 193.0
offset_right = 455.0
offset_bottom = 218.0
theme_override_fonts/font = SubResource("FontFile_s6kl7")
theme_override_font_sizes/font_size = 12
text = "Exit"

[node name="Map List" type="OptionButton" parent="."]
offset_left = 237.0
offset_top = 68.0
offset_right = 269.0
offset_bottom = 88.0

[node name="Type Select" type="OptionButton" parent="."]
offset_left = 56.0
offset_top = 65.0
offset_right = 180.0
offset_bottom = 96.0
selected = 0
item_count = 4
popup/item_0/text = "/EasyMove"
popup/item_1/text = "/EasyRotate"
popup/item_1/id = 1
popup/item_2/text = "/Duplicate"
popup/item_2/id = 2
popup/item_3/text = "/Normal"
popup/item_3/id = 3

[node name="remain_tick" type="Label" parent="."]
visible = false
offset_left = -1.0
offset_top = 48.0
offset_right = 109.0
offset_bottom = 71.0
text = "remain tick : 0"

[node name="clear_" type="Label" parent="."]
visible = false
offset_left = 359.0
offset_top = 157.0
offset_right = 469.0
offset_bottom = 180.0
text = "clear!"
horizontal_alignment = 1

[connection signal="pressed" from="Load Button" to="." method="load_map"]
[connection signal="pressed" from="Load Button" to="." method="active"]
[connection signal="pressed" from="Remove Button" to="." method="remove_map_data"]
[connection signal="item_selected" from="Type Select" to="." method="_on_type_select_item_selected"]
